Worked on flip problem

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     <h1>Memory!</h1>
     <p><button id="start-game">Start New Game</button></p>
-    <p>elapsed time: <span id="elapsed-seconds"></span></p>
+    <p>elapsed time: <span id="elapsed-seconds"></span>
+    matches:
+    missed:
+    </p>
+
 
     <div id="game-board"></div>
 
