flipping is working

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 
     <h1>Memory!</h1>
     <p><button id="start-game">Start New Game</button></p>
+    <section class = "elapsed">
     <p>elapsed time: <span id="elapsed-seconds"></span>
-    matches:
-    missed:
-    </p>
+    <p>matches: </p>
+    <p>missed: </p>
 
+    </section>
 
     <div id="game-board"></div>
 
