--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <h1>Memory!</h1>
     <p><button id="start-game">Start New Game</button></p>
     <section class = "elapsed">
-    <p>elapsed time: <span id="elapsed-seconds"></span>
-    <p>matches: </p>
-    <p>missed: </p>
-
+    <ul>
+        <li>elapsed time: <span id="elapsed-seconds"></span></li>
+        <li>matches:  <span id="matches-made"></span></li>
+        <li>missed:  <span id="overall-missed"></span></li>
+        <li>remaining:  <span id="overall-remaining"></span></li>
+    </ul>
     </section>
 
     <div id="game-board"></div>
